{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 190,
  "lineage": "8391c8f0-fabd-0a04-3f2d-0a31ffd7a3bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02930cd9951abc5d2",
            "domain": "vpc",
            "id": "eipalloc-02930cd9951abc5d2",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-13-56-245-210.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.245.210",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gourav-ec2-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-020c1c4ef042c1253",
            "arn": "arn:aws:ec2:us-west-1:668692460830:instance/i-05fe6a3bea7dbc24d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05fe6a3bea7dbc24d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gourav-tf-key-ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0684b6ef199670499",
            "private_dns": "ip-172-31-14-145.us-west-1.compute.internal",
            "private_ip": "172.31.14.145",
            "public_dns": "ec2-52-53-251-111.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.251.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f0e896aa8cb68b61",
                "volume_size": 35,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "gourav-sg-using-terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ab96ff88034305a",
            "tags": {
              "Name": "my-machine-0"
            },
            "tags_all": {
              "Name": "my-machine-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a00e042a27a42e4d"
            ]
          },
          "dependencies": [
            "aws_key_pair.gourav_terrafoerm_key",
            "aws_security_group.gourav-terraform-security-group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-020c1c4ef042c1253",
            "arn": "arn:aws:ec2:us-west-1:668692460830:instance/i-0b5269056bb1237dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5269056bb1237dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gourav-tf-key-ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08ec07df89c966d29",
            "private_dns": "ip-172-31-11-110.us-west-1.compute.internal",
            "private_ip": "172.31.11.110",
            "public_dns": "ec2-54-176-84-75.us-west-1.compute.amazonaws.com",
            "public_ip": "54.176.84.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fb88ff42c0849767",
                "volume_size": 35,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "gourav-sg-using-terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ab96ff88034305a",
            "tags": {
              "Name": "my-machine-1"
            },
            "tags_all": {
              "Name": "my-machine-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a00e042a27a42e4d"
            ]
          },
          "dependencies": [
            "aws_key_pair.gourav_terrafoerm_key",
            "aws_security_group.gourav-terraform-security-group"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-020c1c4ef042c1253",
            "arn": "arn:aws:ec2:us-west-1:668692460830:instance/i-0b1c96fbbe369583d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b1c96fbbe369583d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gourav-tf-key-ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dcf5dc1899296351",
            "private_dns": "ip-172-31-9-248.us-west-1.compute.internal",
            "private_ip": "172.31.9.248",
            "public_dns": "ec2-52-53-242-172.us-west-1.compute.amazonaws.com",
            "public_ip": "52.53.242.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-040c5b7214443ef61",
                "volume_size": 35,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "gourav-sg-using-terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ab96ff88034305a",
            "tags": {
              "Name": "my-machine-2"
            },
            "tags_all": {
              "Name": "my-machine-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a00e042a27a42e4d"
            ]
          },
          "dependencies": [
            "aws_key_pair.gourav_terrafoerm_key",
            "aws_security_group.gourav-terraform-security-group"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-020c1c4ef042c1253",
            "arn": "arn:aws:ec2:us-west-1:668692460830:instance/i-0a43009a0f0fcc410",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a43009a0f0fcc410",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "gourav-tf-key-ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b27fb25cdfc74c7d",
            "private_dns": "ip-172-31-8-254.us-west-1.compute.internal",
            "private_ip": "172.31.8.254",
            "public_dns": "ec2-54-153-23-76.us-west-1.compute.amazonaws.com",
            "public_ip": "54.153.23.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03e23c249f6682235",
                "volume_size": 35,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "gourav-sg-using-terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ab96ff88034305a",
            "tags": {
              "Name": "my-machine-3"
            },
            "tags_all": {
              "Name": "my-machine-3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a00e042a27a42e4d"
            ]
          },
          "dependencies": [
            "aws_key_pair.gourav_terrafoerm_key",
            "aws_security_group.gourav-terraform-security-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gourav-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:668692460830:internet-gateway/igw-082ace627800718ea",
            "id": "igw-082ace627800718ea",
            "owner_id": "668692460830",
            "tags": {
              "Name": "gourav-IGW-terraform"
            },
            "tags_all": {
              "Name": "gourav-IGW-terraform"
            },
            "vpc_id": "vpc-00225502f108dd8a2"
          },
          "dependencies": [
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02930cd9951abc5d2",
            "connectivity_type": "public",
            "id": "nat-0eec095cf770f8465",
            "network_interface_id": "eni-0a0f19332ef430496",
            "private_ip": "10.0.1.227",
            "public_ip": "13.56.245.210",
            "subnet_id": "subnet-06c1eeae553e95594",
            "tags": {
              "Name": "aws-my-terraform-nat"
            },
            "tags_all": {
              "Name": "aws-my-terraform-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway-eip",
            "aws_subnet.gourav-public-subnet",
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "gourav-vpc-private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-089ef358af66d5d641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0eec095cf770f8465",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-089ef358af66d5d64",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway-eip",
            "aws_nat_gateway.nat_gateway-eip",
            "aws_route_table.gourav-vpc-private-route-table",
            "aws_subnet.gourav-public-subnet",
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "gourav-vpc-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-082ace627800718ea",
            "id": "r-rtb-0e3cb46499cbd36c51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3cb46499cbd36c5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gourav-vpc-igw",
            "aws_route_table.gourav-vpc-public-route-table",
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gourav-vpc-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:668692460830:route-table/rtb-089ef358af66d5d64",
            "id": "rtb-089ef358af66d5d64",
            "owner_id": "668692460830",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gourav-private-route-table"
            },
            "tags_all": {
              "Name": "gourav-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00225502f108dd8a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gourav-vpc-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:668692460830:route-table/rtb-0e3cb46499cbd36c5",
            "id": "rtb-0e3cb46499cbd36c5",
            "owner_id": "668692460830",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "gourav-public-route-table"
            },
            "tags_all": {
              "Name": "gourav-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00225502f108dd8a2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gourav-vpc-private-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fe9d93eba4c1eee",
            "route_table_id": "rtb-089ef358af66d5d64",
            "subnet_id": "subnet-0696f5e37e6f8ab77"
          },
          "dependencies": [
            "aws_route_table.gourav-vpc-private-route-table",
            "aws_subnet.gourav-private-subnet",
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gourav-vpc-public-route-table-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c98f021aadccbd13",
            "route_table_id": "rtb-0e3cb46499cbd36c5",
            "subnet_id": "subnet-06c1eeae553e95594"
          },
          "dependencies": [
            "aws_route_table.gourav-vpc-public-route-table",
            "aws_subnet.gourav-public-subnet",
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gourav-terraform-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:668692460830:security-group/sg-0a00e042a27a42e4d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a00e042a27a42e4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "gourav-sg-using-terraform",
            "name_prefix": "",
            "owner_id": "668692460830",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022425dd6905231e1"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gourav-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:668692460830:subnet/subnet-0696f5e37e6f8ab77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0696f5e37e6f8ab77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668692460830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gourav-private-subnet"
            },
            "tags_all": {
              "Name": "gourav-private-subnet"
            },
            "vpc_id": "vpc-00225502f108dd8a2"
          },
          "dependencies": [
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gourav-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:668692460830:subnet/subnet-06c1eeae553e95594",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c1eeae553e95594",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "668692460830",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "gourav-public-subnet"
            },
            "tags_all": {
              "Name": "gourav-public-subnet"
            },
            "vpc_id": "vpc-00225502f108dd8a2"
          },
          "dependencies": [
            "aws_vpc.gourav-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gourav-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:668692460830:vpc/vpc-00225502f108dd8a2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00753d46a77e55fed",
            "default_route_table_id": "rtb-0d99e39905d98acf3",
            "default_security_group_id": "sg-0edef6fa8e332123f",
            "dhcp_options_id": "dopt-081eb88d232cb5e47",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00225502f108dd8a2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d99e39905d98acf3",
            "owner_id": "668692460830",
            "tags": {
              "Name": "gourav-vpc"
            },
            "tags_all": {
              "Name": "gourav-vpc"
            }
          }
        }
      ]
    }
  ]
}